<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{28e20df2-0591-4dfb-a4d7-597d7dcfe426}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	bON: BOOL; 
	bOFF: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
  	  ESCOLA POLITÉCNICA DE ENXEÑARÍA DE FERROL			
			  UNIVERSIDADE DA CORUÑA 						
			
Máster Universitario en Informática Industrial y Robótica   
  	Automatización Avanzada - Curso 2023-2024			

					Profesorado: 						
 	Antonio J. Díaz Longueira - Míriam Timiraos Díaz 		

 		    	Código realizado por:
	Marta María Álvarez Crespo - Noelia Pita López  		
*)

POU_StopBladePyP();
POU_Contadores();

IF GVL_General.bMarcha THEN
	bON := TRUE;
END_IF

IF NOT GVL_General.bParo THEN
	bON := FALSE;
	POU_FinDeCiclo();
END_IF

IF bON AND GVL_General.bSetaEmergencia THEN
	
	POU_OnFabrica();
	POU_ProcesoEntrada();
	POU_PickAndPlace();
	POU_PositionerAzul();
	POU_Parada();
	PRG_Turntable();
	PRG_Almacen();
	PRG_Cintas();
	PRG_PaneldeControl();
	
	IF GVL_Almacen.bSetaEmergencia THEN
		PRG_RetiradaAlmacen();
	END_IF
	
END_IF

IF NOT GVL_General.bSetaEmergencia THEN
	POU_SetaEmergencia();
END_IF





























































(*
		♡ 
    /\_____/\
   /  o   o  \						
  ( ==  ^  == )		
   )         (		   __     miau
 (             )______/  |		miau 
(__(__)___(__)__)_______/	 

*)
]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="763" Count="12" />
      <LineId Id="786" Count="0" />
      <LineId Id="535" Count="0" />
      <LineId Id="841" Count="0" />
      <LineId Id="536" Count="6" />
      <LineId Id="891" Count="0" />
      <LineId Id="543" Count="2" />
      <LineId Id="898" Count="0" />
      <LineId Id="546" Count="4" />
      <LineId Id="863" Count="1" />
      <LineId Id="877" Count="0" />
      <LineId Id="900" Count="3" />
      <LineId Id="899" Count="0" />
      <LineId Id="904" Count="0" />
      <LineId Id="551" Count="0" />
      <LineId Id="557" Count="3" />
      <LineId Id="562" Count="0" />
      <LineId Id="880" Count="0" />
      <LineId Id="564" Count="0" />
      <LineId Id="776" Count="4" />
      <LineId Id="565" Count="1" />
      <LineId Id="787" Count="49" />
      <LineId Id="567" Count="0" />
      <LineId Id="753" Count="4" />
      <LineId Id="840" Count="0" />
      <LineId Id="760" Count="2" />
      <LineId Id="568" Count="0" />
      <LineId Id="87" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>